/* Button string to open settings that allows user to switch their default browser to Neeva. */
"DefaultBrowserCard.Button" = "Go to Settings";

/* Description for small card shown that allows user to switch their default browser to Neeva. */
"DefaultBrowserCard.Description" = "Open links in Neeva automatically by making it your Default Browser App.";

/* Title for small card shown that allows user to switch their default browser to Neeva. */
"DefaultBrowserCard.Title" = "Switch Your Default Browser";

/* Button string to open settings that allows user to switch their default browser to Neeva. */
"DefaultBrowserOnboarding.Button" = "Go to Settings";

/* Description for default browser onboarding card. */
"DefaultBrowserOnboarding.Description1" = "1. Go to Settings";

/* Description for default browser onboarding card. */
"DefaultBrowserOnboarding.Description2" = "2. Tap Default Browser App";

/* Description for default browser onboarding card. */
"DefaultBrowserOnboarding.Description3" = "3. Select Neeva";

/* Text for the screenshot of the iOS system settings page for Neeva. */
"DefaultBrowserOnboarding.Screenshot" = "Default Browser App";

/* Menu option for setting Neeva as default browser. */
"Settings.DefaultBrowserMenuItem" = "Set as Default Browser";

