...

    // content
    @ObservedObject var content: ToastViewContent
    var toastProgressViewModel: ToastProgressViewModel?

    // checkmark included
    var checkmark = false

    var body: some View {
        VStack {
            Spacer()

            ZStack(alignment: .leading) {
...
